@@ -62,12 +62,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version> <!-- or the version you are using -->
-                <configuration>
-                    <compilerArgs>--enable-preview <!-- Disable Xdoclint warnings -->
-                    </compilerArgs>
-                    <source>21</source>
-                    <target>21</target>
-                </configuration>
             </plugin>
         </plugins>
     </build>
